// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label renders with different Colours 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <span
    className="sc-fJAkKG gaoGfX"
    size="xsmall"
  >
    Xsmall
  </span>
  <span
    className="sc-fJAkKG gfRzFI"
    color="goten.100"
    size="xsmall"
  >
    Xsmall
  </span>
  <span
    className="sc-fJAkKG bQiCcA"
    color="goten.100"
    size="xsmall"
  >
    Medium
  </span>
</div>
`;

exports[`Label renders with different Icons 1`] = `
<div
  className="flex flex-col justify-around items-center w-full"
>
  <div
    className="flex justify-around items-center w-full mb-4"
  >
    <span
      className="sc-fJAkKG MRcTJ"
      size="twoxsmall"
    >
      <span
        className="sc-bXVllQ hvymNJ"
        size="twoxsmall"
      >
        <svg
          className="sc-iFwKgL"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Twoxsmall
    </span>
    <span
      className="sc-fJAkKG eDCLPd"
      size="twoxsmall"
    >
      Twoxsmall
      <span
        className="sc-hVABYF dUKEPR"
        size="twoxsmall"
      >
        <svg
          className="sc-hTtwUo"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
    <span
      className="sc-fJAkKG jkkiIn"
      size="twoxsmall"
    >
      <span
        className="sc-bXVllQ hvymNJ"
        size="twoxsmall"
      >
        <svg
          className="sc-iFwKgL"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Twoxsmall
      <span
        className="sc-hVABYF dUKEPR"
        size="twoxsmall"
      >
        <svg
          className="sc-hTtwUo"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    className="flex justify-around items-center w-full"
  >
    <span
      className="sc-fJAkKG MRcTJ"
      size="xsmall"
    >
      <span
        className="sc-bXVllQ hvymNJ"
        size="xsmall"
      >
        <svg
          className="sc-iFwKgL"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Xsmall
    </span>
    <span
      className="sc-fJAkKG eDCLPd"
      size="xsmall"
    >
      Xsmall
      <span
        className="sc-hVABYF dUKEPR"
        size="xsmall"
      >
        <svg
          className="sc-hTtwUo"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
    <span
      className="sc-fJAkKG jkkiIn"
      size="xsmall"
    >
      <span
        className="sc-bXVllQ hvymNJ"
        size="xsmall"
      >
        <svg
          className="sc-iFwKgL"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Xsmall
      <span
        className="sc-hVABYF dUKEPR"
        size="xsmall"
      >
        <svg
          className="sc-hTtwUo"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`Label renders with different Letter Cases 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <span
    className="sc-fJAkKG gaoGfX"
    size="xsmall"
  >
    Default
  </span>
  <span
    className="sc-fJAkKG igksmw"
    size="xsmall"
  >
    Lowercase
  </span>
</div>
`;

exports[`Label renders with different Sizes 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <span
    className="sc-fJAkKG gaoGfX"
    size="twoxsmall"
  >
    Twoxsmall
  </span>
  <span
    className="sc-fJAkKG gaoGfX"
    size="xsmall"
  >
    Xsmall
  </span>
  <span
    className="sc-fJAkKG igksmw"
    size="twoxsmall"
  >
    Twoxsmall
  </span>
  <span
    className="sc-fJAkKG igksmw"
    size="xsmall"
  >
    Xsmall
  </span>
</div>
`;
